src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Agreement you selected is not associated with the Account that is selected on this Invoice.</errorMessage>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Agreement__c.Account__c</valueField>
            </filterItems>
            <infoMessage>These results have been filtered to show only Agreements for the Account selected on this Invoice.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Blended_Rate__c</fullName>
        <formula>( Total_Invoice_Amount__c -  Total_Goodwill_Applied__c ) / ( Total_Hours__c -  Total_Goodwill_Hours__c)</formula>
        <label>Average Blended Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_First_Name__c</fullName>
        <formula>IF(
  OR(
    RecordType.DeveloperName = &apos;X10K_Product_Invoice&apos;,
    RecordType.DeveloperName = &apos;Delivery_Partner_Invoice&apos;
  ),
  Account__r.Primary_Billing_Contact__r.FirstName,
  Agreement__r.Billing_Contact__r.FirstName
)</formula>
        <label>Billing Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Period_End_Date__c</fullName>
        <label>Billing Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Period_Start_Date__c</fullName>
        <label>Billing Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Partner_Invoice_Ready_for_QB__c</fullName>
        <formula>AND(
  RecordType.DeveloperName = &apos;Delivery_Partner_Invoice&apos;,
  ISPICKVAL(Type__c, &apos;Actual&apos;),
  Billing_Period_Start_Date__c &gt;= DATE(2017,01,01)
)</formula>
        <label>Delivery Partner Invoice Ready for QB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Blended_Rate__c</fullName>
        <formula>( Total_Invoice_Amount__c - Total_Goodwill_Applied__c - Total_Credits_Applied__c) / ( Total_Hours__c - Total_Goodwill_Hours__c)</formula>
        <label>Effective Blended Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exclude_From_Next_Past_Due_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude From Next Past Due Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expert_Names__c</fullName>
        <label>Expert Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Payment_Date__c</fullName>
        <label>First Payment Date</label>
        <summarizedField>Payment__c.Payment_Date__c</summarizedField>
        <summaryForeignKey>Payment__c.Invoice__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Invoice_Branding_Text__c</fullName>
        <formula>IF(
  NOT(ISBLANK(Agreement__c)),
  TEXT(Agreement__r.Invoice_Branding__c),
  &apos;10K Advisors&apos;
)</formula>
        <label>Invoice Branding</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Generated_On__c</fullName>
        <label>Billing Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Notes__c</fullName>
        <label>Invoice Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <label>Last Payment Date</label>
        <summarizedField>Payment__c.Payment_Date__c</summarizedField>
        <summaryForeignKey>Payment__c.Invoice__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <formula>Profit_Margin__c / Total_Invoice_Amount__c</formula>
        <label>Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Opportunity you selected is not associated with the Account that is selected on this Invoice.</errorMessage>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Opportunity.AccountId</valueField>
            </filterItems>
            <infoMessage>These results have been filtered to show only Opportunities for the Account selected on this Invoice.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance__c</fullName>
        <formula>IF(
  ISPICKVAL(Type__c, &quot;Void&quot;),
  0,
  Total_Invoice_Amount__c - Total_Amount_Paid__c
)</formula>
        <label>Outstanding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Initiated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Initiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profit_Margin__c</fullName>
        <label>Profit Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Project you selected is not associated with the Account that is selected on this Invoice.</errorMessage>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Project__c.Account__c</valueField>
            </filterItems>
            <infoMessage>These results have been filtered to show only Projects for the Account selected on this Invoice.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuickBooks_Bill_Id__c</fullName>
        <externalId>true</externalId>
        <label>QuickBooks Bill Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QuickBooks_Id__c</fullName>
        <externalId>true</externalId>
        <label>QuickBooks Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Selected_To_Send_From_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected To Send From Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_To_Customer_On__c</fullName>
        <label>Finalized On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Services_Invoice_Ready_for_QuickBooks__c</fullName>
        <formula>AND(
  OR(
    RecordType.DeveloperName = &apos;X10K_Services_Invoice&apos;,
    RecordType.DeveloperName = &apos;X10K_Product_Invoice&apos;
  ),
  ISPICKVAL(Type__c, &apos;Actual&apos;)
)</formula>
        <label>Services Invoice Ready for QuickBooks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Paid__c</fullName>
        <label>Total Amount Paid</label>
        <summarizedField>Payment__c.Amount__c</summarizedField>
        <summaryForeignKey>Payment__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Value__c</fullName>
        <label>Total Billable Value</label>
        <summarizedField>Invoice_Line_Item__c.Line_Item_Total_Text__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_Line_Item__c.Goodwill_Amount__c</field>
            <operation>equals</operation>
            <value>, 0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Invoice_Line_Item__c.Credit_Amount__c</field>
            <operation>equals</operation>
            <value>, 0</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Credits_Applied__c</fullName>
        <label>Total Credits Applied</label>
        <summarizedField>Invoice_Line_Item__c.Credit_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_Line_Item__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>10K Credit Invoice Line Item</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Discounts_Applied__c</fullName>
        <label>Total Discounts Applied</label>
        <summarizedField>Invoice_Line_Item__c.Discount__c</summarizedField>
        <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Goodwill_Applied__c</fullName>
        <label>Total Goodwill Applied</label>
        <summarizedField>Invoice_Line_Item__c.Goodwill_Amount__c</summarizedField>
        <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Goodwill_Hours__c</fullName>
        <label>Total Goodwill Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Invoiced__c</fullName>
        <formula>Total_Hours__c  -  Total_Goodwill_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_Amount__c</fullName>
        <label>Total Invoice Amount</label>
        <summarizedField>Invoice_Line_Item__c.Line_Item_Total_Text__c</summarizedField>
        <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_Cost__c</fullName>
        <label>Total Invoice Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Actual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Void</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Agreement__c</columns>
        <columns>Type__c</columns>
        <columns>Total_Invoice_Amount__c</columns>
        <columns>Outstanding_Balance__c</columns>
        <columns>Billing_Period_Start_Date__c</columns>
        <columns>Billing_Period_End_Date__c</columns>
        <columns>QuickBooks_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Draft_invoices_from_last_month</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Account__c</columns>
        <columns>Agreement__c</columns>
        <columns>Total_Invoice_Amount__c</columns>
        <columns>Total_Amount_Paid__c</columns>
        <columns>Sent_To_Customer_On__c</columns>
        <columns>Invoice_Generated_On__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Invoice__c.X10K_Services_Invoice</value>
        </filters>
        <filters>
            <field>Billing_Period_Start_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Draft invoices from last month</label>
        <sharedTo>
            <role>Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Invoices_that_need_to_be_sent</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Agreement__c</columns>
        <columns>QuickBooks_Id__c</columns>
        <columns>Total_Invoice_Amount__c</columns>
        <columns>Total_Amount_Paid__c</columns>
        <columns>Sent_To_Customer_On__c</columns>
        <columns>Invoice_Generated_On__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sent_To_Customer_On__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Invoice__c.X10K_Services_Invoice</value>
        </filters>
        <label>Services invoices that need to be sent</label>
        <sharedTo>
            <role>Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Invoices_with_Goodwill</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Invoice_Generated_On__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Total_Invoice_Amount__c</columns>
        <columns>Total_Goodwill_Applied__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Total_Goodwill_Applied__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Invoices with Goodwill</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Last_Month_s_Delivery_Partner_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Billing_Period_End_Date__c</columns>
        <columns>Total_Invoice_Amount__c</columns>
        <columns>Outstanding_Balance__c</columns>
        <columns>Delivery_Partner_Invoice_Ready_for_QB__c</columns>
        <columns>Type__c</columns>
        <columns>QuickBooks_Bill_Id__c</columns>
        <columns>QuickBooks_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Invoice__c.Delivery_Partner_Invoice</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Actual</value>
        </filters>
        <filters>
            <field>Outstanding_Balance__c</field>
            <operation>notEqual</operation>
            <value>,0</value>
        </filters>
        <label>Open Invoices</label>
        <sharedTo>
            <group>X10K_Executive_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Delivery_Partner_Invoices_DATE</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Total_Invoice_Amount__c</columns>
        <columns>Outstanding_Balance__c</columns>
        <columns>Delivery_Partner_Invoice_Ready_for_QB__c</columns>
        <columns>Type__c</columns>
        <columns>QuickBooks_Bill_Id__c</columns>
        <columns>QuickBooks_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Invoice__c.Delivery_Partner_Invoice</value>
        </filters>
        <filters>
            <field>Billing_Period_End_Date__c</field>
            <operation>equals</operation>
            <value>11/30/2017</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Open Delivery Partner Invoices (DATE)</label>
        <sharedTo>
            <group>X10K_Executive_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Outstanding_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Type__c</columns>
        <columns>Total_Invoice_Amount__c</columns>
        <columns>Outstanding_Balance__c</columns>
        <columns>Billing_Period_Start_Date__c</columns>
        <columns>Billing_Period_End_Date__c</columns>
        <columns>QuickBooks_Id__c</columns>
        <columns>Exclude_From_Next_Past_Due_Notification__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Outstanding_Balance__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Invoice__c.X10K_Product_Invoice,Invoice__c.X10K_Services_Invoice</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Actual</value>
        </filters>
        <label>Outstanding Client Invoices</label>
    </listViews>
    <listViews>
        <fullName>Sent_invoices_from_last_month</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Agreement__c</columns>
        <columns>QuickBooks_Id__c</columns>
        <columns>Total_Invoice_Amount__c</columns>
        <columns>Total_Amount_Paid__c</columns>
        <columns>Sent_To_Customer_On__c</columns>
        <columns>Invoice_Generated_On__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Actual</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Invoice__c.X10K_Services_Invoice</value>
        </filters>
        <filters>
            <field>Billing_Period_Start_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <filters>
            <field>Sent_To_Customer_On__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Sent invoices for last month</label>
        <sharedTo>
            <role>Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>This_Month_s_Delivery_Partner_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Total_Invoice_Amount__c</columns>
        <columns>Outstanding_Balance__c</columns>
        <columns>Delivery_Partner_Invoice_Ready_for_QB__c</columns>
        <columns>Type__c</columns>
        <columns>QuickBooks_Bill_Id__c</columns>
        <columns>QuickBooks_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Invoice__c.Delivery_Partner_Invoice</value>
        </filters>
        <filters>
            <field>Billing_Period_End_Date__c</field>
            <operation>equals</operation>
            <value>10/31/2017</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>This Month&apos;s Delivery Partner Invoices</label>
        <sharedTo>
            <group>X10K_Executive_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>This_Month_s_Draft_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Agreement__c</columns>
        <columns>Invoice_Generated_On__c</columns>
        <columns>QuickBooks_Id__c</columns>
        <columns>Total_Invoice_Amount__c</columns>
        <columns>Total_Amount_Paid__c</columns>
        <columns>Sent_To_Customer_On__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_Generated_On__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Invoice__c.X10K_Services_Invoice</value>
        </filters>
        <label>This Month&apos;s DRAFT Invoices</label>
        <sharedTo>
            <role>Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>This_Month_s_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Agreement__c</columns>
        <columns>QuickBooks_Id__c</columns>
        <columns>Total_Invoice_Amount__c</columns>
        <columns>Total_Amount_Paid__c</columns>
        <columns>Sent_To_Customer_On__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_Generated_On__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month&apos;s Invoices</label>
        <sharedTo>
            <role>Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Voided_Invoices</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Agreement__c</columns>
        <columns>Type__c</columns>
        <columns>Total_Invoice_Amount__c</columns>
        <columns>Outstanding_Balance__c</columns>
        <columns>Billing_Period_Start_Date__c</columns>
        <columns>Billing_Period_End_Date__c</columns>
        <columns>QuickBooks_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Void</value>
        </filters>
        <label>Voided Invoices</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <recordTypes>
        <fullName>Delivery_Partner_Invoice</fullName>
        <active>true</active>
        <description>Invoices generated by our Delivery Partners, payable by 10K</description>
        <label>Delivery Partner Invoice</label>
    </recordTypes>
    <recordTypes>
        <fullName>X10K_Product_Invoice</fullName>
        <active>true</active>
        <description>Invoices generated by 10K and sent to our Clients for Products</description>
        <label>10K Product Invoice</label>
    </recordTypes>
    <recordTypes>
        <fullName>X10K_Services_Invoice</fullName>
        <active>true</active>
        <description>Invoices generated by 10K and sent to our Clients for Expert Services</description>
        <label>10K Services Invoice</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Invoice_Type_Validation_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>IF(
  AND( 
    ISCHANGED(Type__c),
    ISPICKVAL(Type__c, &apos;Actual&apos;),
    RecordType.Name == &apos;Delivery Partner Invoice&apos;
  ),
  IF(
    Account__r.BillingCountry == &apos;United States&apos;,
    IF(
      AND(
        !ISBLANK(Account__r.BillingStreet),
        !ISPICKVAL(Account__r.BillingCountryCode,&quot;&quot;),
        !ISBLANK(Account__r.BillingCity),
        !ISBLANK(Account__r.BillingPostalCode),
        !ISPICKVAL(Account__r.BillingStateCode,&quot;&quot;),
        !ISBLANK(Account__r.Taxpayer_Identification_Number_TIN__c),
        !ISBLANK(Account__r.Bank_Name__c),
        !ISBLANK(Account__r.Routing_Number__c ),
        !ISBLANK(Account__r.Account_Number__c)
      ), 
      false, 
      true
    ), 
    IF(
      Account__r.BillingCountry == &apos;India&apos;, 
      IF(
        AND(
          !ISBLANK(Account__r.BillingStreet),
          !ISBLANK(Account__r.BillingCity),
          !ISBLANK(Account__r.BillingPostalCode),
          !ISPICKVAL(Account__r.BillingStateCode,&quot;&quot;),
          !ISBLANK(Account__r.Bank_Name__c),
          !ISBLANK(Account__r.Account_Number__c),
          !ISBLANK(Account__r.Routing_Number__c),
          !ISBLANK(Account__r.Bank_Address__c),
          !ISBLANK(Account__r.Indian_Financial_Services_Code__c)
        ),
        false, 
        true
      ), 
      IF(
        AND(
          !ISBLANK(Account__r.BillingStreet),
          !ISPICKVAL(Account__r.BillingCountryCode,&quot;&quot;),
          !ISBLANK(Account__r.BillingCity),
          !ISBLANK(Account__r.BillingPostalCode),
          !ISPICKVAL(Account__r.BillingStateCode,&quot;&quot;),
          !ISBLANK(Account__r.Bank_Name__c),
          !ISBLANK(Account__r.Account_Number__c),
          !ISBLANK(Account__r.Routing_Number__c),
          !ISBLANK(Account__r.Bank_Address__c)
        ), 
        false, 
        true
      ) 
    ) 
  ),
  false
)</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>Delivery Partner Invoice cannot be marked as Actual until Account required fields are filled</errorMessage>
    </validationRules>
</CustomObject>